{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 17,
  "lineage": "036bb390-ed72-7a4c-56de-910847689b69",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-08e98339ae7b23de7",
            "domain": "vpc",
            "id": "eipalloc-0bfe27d9edf152e42",
            "network_interface": "eni-0dca0b8dc5d5c8e7a",
            "private_dns": "ip-10-11-27-249.ec2.internal",
            "private_ip": "10.11.27.249",
            "public_dns": "ec2-54-210-135-175.compute-1.amazonaws.com",
            "public_ip": "54.210.135.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudelligent-dev-eip-nat-gateway-1",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0ca38bf36f051743f",
            "owner_id": "652894462349",
            "tags": {
              "Name": "cloudelligent-dev-igw",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfe27d9edf152e42",
            "id": "nat-089436bfdcc7f70cf",
            "network_interface_id": "eni-0dca0b8dc5d5c8e7a",
            "private_ip": "10.11.27.249",
            "public_ip": "54.210.135.175",
            "subnet_id": "subnet-0af3ab44744522e3b",
            "tags": {
              "Name": "cloudelligent-dev-nat-gateway-1",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database-routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08768947bfdcff05f",
            "owner_id": "652894462349",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-089436bfdcc7f70cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudelligent-dev-private-routes-1",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a28d90c3885c283f",
            "owner_id": "652894462349",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-089436bfdcc7f70cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudelligent-dev-private-routes-2",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b11ec40d7c35a1b1",
            "owner_id": "652894462349",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca38bf36f051743f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudelligent-dev-public-routes",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database-routes-association",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9177e29847425b2",
            "route_table_id": "rtb-08768947bfdcff05f",
            "subnet_id": "subnet-095705fb7cb8ec976"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4bd75e05318d758",
            "route_table_id": "rtb-0a28d90c3885c283f",
            "subnet_id": "subnet-078a3cd97f244ee75"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025b162fa111e1d7d",
            "route_table_id": "rtb-0b11ec40d7c35a1b1",
            "subnet_id": "subnet-0af3ab44744522e3b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d26e6d5a7eb18ec3",
            "route_table_id": "rtb-0b11ec40d7c35a1b1",
            "subnet_id": "subnet-0164ea730df026a80"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652894462349:subnet/subnet-095705fb7cb8ec976",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.48.0/20",
            "id": "subnet-095705fb7cb8ec976",
            "map_public_ip_on_launch": false,
            "owner_id": "652894462349",
            "tags": {
              "Name": "cloudelligent-dev-private-subnets-1",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652894462349:subnet/subnet-078a3cd97f244ee75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.64.0/20",
            "id": "subnet-078a3cd97f244ee75",
            "map_public_ip_on_launch": false,
            "owner_id": "652894462349",
            "tags": {
              "Name": "cloudelligent-dev-private-subnets-2",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652894462349:subnet/subnet-0af3ab44744522e3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.11.16.0/20",
            "id": "subnet-0af3ab44744522e3b",
            "map_public_ip_on_launch": false,
            "owner_id": "652894462349",
            "tags": {
              "Name": "cloudelligent-dev-public-subnets-1",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652894462349:subnet/subnet-0164ea730df026a80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.11.32.0/20",
            "id": "subnet-0164ea730df026a80",
            "map_public_ip_on_launch": false,
            "owner_id": "652894462349",
            "tags": {
              "Name": "cloudelligent-dev-public-subnets-2",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0ad726700857ff34f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652894462349:vpc/vpc-0ad726700857ff34f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0f678d78968f491a6",
            "default_route_table_id": "rtb-0d01bb09903607458",
            "default_security_group_id": "sg-05c3290c018c065a4",
            "dhcp_options_id": "dopt-00e12faebc4a9143a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ad726700857ff34f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d01bb09903607458",
            "owner_id": "652894462349",
            "tags": {
              "Location": "Virginia",
              "Name": "cloudelligent-vpc-dev",
              "kubernetes.io/cluster/cloudelligent-dev-eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}